<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radiobuttons.week5.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="341dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtShow"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/provide_info_above_to_receive_your_message"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_enter_here"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/email_enter_here"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

</android.support.constraint.ConstraintLayout>
